# Define our crates within a workspace

[workspace]
resolver = "2"
members = [
    "bindings",
    "mariadb",
    "macros",
    "examples/keymgt-basic-rs",
    "examples/keymgt-debug-rs",
    "examples/encryption-rs",
    "plugins/keymgt-clevis",
    "plugins/encryption-chacha",
    "test-runner",
]
