# Define our crates within a workspace

[workspace]
resolver = "2"
members = [
    "bindings",
    "mariadb",
    "macros",
    "common/encryption-common",
    "examples/keymgt-basic-rs",
    "examples/keymgt-debug-rs",
    "examples/encryption-simple-rs",
    "examples/encryption-aes-rs",
    "plugins/keymgt-clevis",
    "plugins/encryption-file-chacha",
    "test-runner",
]
